--- a/ptu202012900841/lesson02-eureka-consumer/pom.xml
+++ b/ptu202012900841/lesson02-eureka-consumer/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>lesson02-eureka-consumer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
