--- a/ptu202012900841/lesson02-eureka-provider/pom.xml
+++ b/ptu202012900841/lesson02-eureka-provider/pom.xml
@@ -12,4 +12,17 @@
     <artifactId>lesson02-eureka-provider</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
