--- a/ptu202012900841/lesson02-eureka-server-another/pom.xml
+++ b/ptu202012900841/lesson02-eureka-server-another/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lesson02-eureka-server-another</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
