--- a/ptu202012900841/pom.xml
+++ b/ptu202012900841/pom.xml
@@ -22,6 +22,7 @@
         <module>lesson05-hystrix-dashboard</module>
         <module>lesson05-feign-hystrix-another</module>
         <module>lesson05-turbine-server</module>
+        <module>lesson06-gateway</module>
     </modules>
 
     <!--    1.继承spring boot父项目-->
